--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "clean-css-cli": "^4.2.1",
-    "uglify-js": "^3.4.9"
+    "node-sass": "^4.14.1",
+    "rollup": "^2.9.1",
+    "rollup-plugin-postcss": "^3.1.1",
+    "rollup-plugin-scss": "^2.5.0",
+    "rollup-plugin-terser": "^5.3.0"
   },
   "scripts": {
     "build": "make build"
