--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "clean-css-cli": "^4.2.1",
     "node-sass": "^4.14.1",
     "rollup": "^2.9.1",
     "rollup-plugin-postcss": "^3.1.1",
@@ -32,6 +31,6 @@
     "rollup-plugin-terser": "^5.3.0"
   },
   "scripts": {
-    "build": "make build"
+    "build": "rollup -c"
   }
 }
