--- a/package.json
+++ b/package.json
@@ -24,13 +24,20 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
+    "@rollup/plugin-typescript": "^4.1.1",
+    "eslint": "^7.0.0",
     "node-sass": "^4.14.1",
     "rollup": "^2.9.1",
     "rollup-plugin-postcss": "^3.1.1",
     "rollup-plugin-scss": "^2.5.0",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-terser": "^5.3.0",
+    "tslib": "^1.12.0",
+    "tslint": "^6.1.2",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "^3.9.2"
   },
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   }
 }
